--- a/desigin_pattern_advance/pom.xml
+++ b/desigin_pattern_advance/pom.xml
@@ -272,7 +272,11 @@
             <artifactId>jackson-dataformat-avro</artifactId>
             <version>2.9.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
     </dependencies>
 
     <build>
